# rust_chess

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  first_bot.logs  lichess-bot.py  log.txt  requirements.txt
benches/: chess_benchmark.rs  sort_benchmark.rs
notes/: bench_15_12_23
scripts/: display.py  lichess-bot.py  localplay.py  selfplay.py  test-engine.ipynb  wrapper.py
scripts/results/: rust_chess_vs_rust_chess_2024-01-07_19:31:45.json
src/: config.rs  eval.rs  lib.rs  main.rs  movelist.rs  nn.rs  search.rs  search.rs.old  table.rs  test_utils.rs  threading.rs  uci.rs
tests/: system_test.rs  tests.rs  unit_test.rs
