[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
derive-new = "0.5"
dfdx = "0.13.0"
log = "0.4.20"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "chess_benchmark"
harness = false

